# deepseek-cli

./: Cargo.toml
src/: main.rs  renderer.rs
